{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 5,
  "lineage": "2ce51321-76e4-a36a-acd8-80a5410190ac",
  "resources": [
    {
      "module": "module.eks_pod_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492167245:security-group/sg-0c1316e6c2a3704cb",
            "description": "Security group for EKS pods",
            "egress": [],
            "id": "sg-0c1316e6c2a3704cb",
            "ingress": [],
            "name": "eks_pod_sg-20241030175246363200000001",
            "name_prefix": "eks_pod_sg-",
            "owner_id": "381492167245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Created-at": "30 Oct 24 17:52:44",
              "Environment": "testing",
              "Name": "eks_pod_sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Created-at": "30 Oct 24 17:52:44",
              "Environment": "testing",
              "Name": "eks_pod_sg",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-03ae3f1b9f7028861"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_pod_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3830379151",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c1316e6c2a3704cb",
            "security_group_rule_id": "sgr-003b87ad7ac9d9a7f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_pod_sg.aws_security_group.this",
            "module.eks_pod_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.eks_pod_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "HTTP traffic",
            "from_port": 80,
            "id": "sgrule-3640848095",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1316e6c2a3704cb",
            "security_group_rule_id": "sgr-0192eeb8bee5c0edb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_pod_sg.aws_security_group.this",
            "module.eks_pod_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "User-service ports",
            "from_port": 8080,
            "id": "sgrule-3821896772",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1316e6c2a3704cb",
            "security_group_rule_id": "sgr-0afa6915f5908ad1a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_pod_sg.aws_security_group.this",
            "module.eks_pod_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}